<resources>
    <string name="app_name">Ceting</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="discover_your_nearby">Discover your</string>
    <string name="nearby_friend">Nearby Friends</string>
    <string name="nearby_friend_desc"><![CDATA[Find your all friends in one place by\nsigning the apps quick & easily.]]></string>
    <string name="have_an_account">Have an account? Sign In</string>
    <string name="join_us_free">Join us, its free</string>
    <string name="loading">Loading</string>
    <string name="login_success">Login Success</string>
    <string name="ok">Ok</string>
    <string name="open_chat">Open Chat</string>
    <string name="login_failed">Login Failed</string>
    <string name="sign_in_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="display_name">Display Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_success">Sign Up success</string>
    <string name="register_failed">Sign Up Failed</string>
    <string name="sign_up_in">Sign Up</string>
    <string name="form_not_valid">Form Not Valid</string>
    <string name="chat">Chat</string>
    <string name="all_chat">All Chat</string>
    <string name="no_conversation">No Conversation</string>
    <string name="no_conversation_desc">You didn\'t made any conversation yet,\nplease select username</string>
    <string name="contact">Contact</string>
    <string name="search">Search</string>
    <string name="add_person">Person</string>
    <string name="no_contact">No Contact</string>
    <string name="sample_name">John Doe</string>
    <string name="sample_status">Live like larry</string>
    <string name="sample_message_time">3m ago</string>
</resources>
