<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/bg_login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/dp20"
        android:paddingEnd="@dimen/dp20"
        android:paddingBottom="@dimen/dp40"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            style="@style/RobotoRegular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/discover_your_nearby"
            android:textColor="@color/white"
            android:textSize="@dimen/sp40"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nearby_friend"
            android:textColor="@color/white"
            android:textSize="@dimen/sp40" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp10"
            android:text="@string/nearby_friend_desc"
            android:textColor="@color/white"
            android:textSize="@dimen/sp18" />

        <Button
            android:id="@+id/btn_login"
            style="@style/RobotoRegular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp20"
            android:background="@drawable/btn_white_corner"
            android:text="@string/have_an_account"
            android:textColor="@color/white"
            android:textSize="@dimen/sp15"
            android:textAllCaps="false"
            android:textStyle="bold" />

        <Button
            style="@style/RobotoRegular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp20"
            android:textAllCaps="false"
            android:background="@drawable/btn_white_action"
            android:text="@string/join_us_free"
            android:textColor="@color/black"
            android:textSize="@dimen/sp15"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>