<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:padding="@dimen/dp16">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/contact_sample_image"
        app:civ_border_color="#FF000000"
        app:civ_border_width="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp16"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/profile_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/profile_image"
        app:layout_constraintTop_toTopOf="@id/profile_image">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_contact_name"
                style="@style/RobotoRegular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sample_name"
                android:textColor="@color/black"
                android:textSize="@dimen/sp18" />

            <TextView
                android:id="@+id/tv_last_message_time"
                style="@style/RobotoRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_message_time"
                android:textColor="@color/black" />
        </LinearLayout>

        <TextView
            style="@style/RobotoRegular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample_status" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>